--- a/test.html
+++ b/test.html
@@ -11,11 +11,11 @@
             </div>
             <div class='game'>
                 <div class='container'>
-                    <canvas id='game' width='500' height='500'></canvas>
+                    <canvas id='game' width='800' height='800'></canvas>
                     <br>
                     <div class='inline'>
                         <div>
-                            <canvas id='pieces' class='pieces' width='480' height='160'></canvas>
+                            <canvas id='pieces' class='pieces' width='600' height='200'></canvas>
                         </div>
                         <div>
                             <button id='deletePiece' class='deletePiece'>Delete Piece</button>
@@ -26,8 +26,7 @@
                     <button id='play' class='btn'>Play</button>
                     <button id='check' class='btn'>Check!</button>
                     <script src='assets/scripts/remember.js'></script>
-                    <div id='result'>
-                    </div>
+                    <div id='result'></div>
                 </div>
                 <div class='rules'>
                     <p>After clicking play a random chess board layout will be shown to you for a few seconds</p>
