--- a/index.html
+++ b/index.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello, World!</title>
-        <link rel='stylesheet', href='assets/stylesheets/index.css'>
+        <title>memchess</title>
+        <link rel='stylesheet', href='assets/stylesheets/play.css'>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <p class='heading'>memChess</p>
-        <form action='play' method='post'>
-            <div class='difficulty'>
-                <span>Select a Difficulty: </span> 
-                <select class='diffSel' name='difficulty'>
-                    <option value='easy'>Easy</option>
-                    <option value='easy'>Medium</option>
-                    <option value='easy'>Hard</option>
-                </select>
+        <div class='screen'>
+            <div class='logo'>
+                <p>memchess</p>
             </div>
-            <div class="playBtn">
-                <button type="submit">Play</button> 
+            <div class='game'>
+                <div class='container'>
+                    <canvas id='game'></canvas>
+                    <br>
+                    <canvas id='pieces' class='pieces' width='600px' height='200px'></canvas>
+                    <div class='buttons'>
+                        <button id='play' class='btn'>Play<br></button>
+                        <button id='check' class='btn'>Check<br></button>
+                        <button id='deletePiece' class='btn'>Delete Piece</button>
+                        <button id='deleteBoard' class='btn'>Delete Board</button>
+                        <select name="diff" id="diff">
+                            <option value='0'>Easy</option>
+                            <option value='1' selected>Medium</option>
+                            <option value='2'>Hard</option>
+                            <option value='3'>Insane</option>
+                        </select>
+                    </div>
+                </div> 
             </div>
-        </form>
-        <img src="assets/images/chesspieces.png" class="bottom"/>
+            <div class='logo'>
+                <p>memchess</p>
+            </div>
+        </div>
+        <div id='result'></div>
+        <div class='rules'>
+            <p>After clicking play a random chess board layout will be shown to you for a few seconds</p>
+            <p>You will need to recreate this layout by selecting the pieces from above and putting them in the correct places on the board</p>
+            <p>If you've placed a piece incorrectly, select the x button an click the piece to be removed</p>
+            <p>Check your answer using the check button</p>
+            <p>Click the play button at any time to create a new layout</p>
+        </div>
+        <script src='assets/scripts/remember.js'></script>
     </body>
 </html>
