added meta tags

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="Memchess is a memory trainer based on the game of Chess. Improve your
+        memory by recreating chess board layouts from memory.">
+        <meta name="keywords" content="chess,memory,game,iq,memchess,memory trainer,brain improvement,chess game,memory chess,chess improvement">
+        <meta name="author" content="Nojus Visneveckas">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>memchess</title>
         <link rel='stylesheet', href='assets/stylesheets/play.css'>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class='screen'>
